# fyde-rs-sdk

./: ._target  Cargo.toml  README.md
src/: action.rs  asset.rs  errors.rs  governance.rs  lib.rs  liquid_vault.rs  protocol_history.rs  snapshot.rs  user.rs  utils.rs  ve_fyde.rs
src/abis/: GovernanceModule.json  LiquidVault.json  OracleModule.json  RelayerV2.json  RevenueVeFydeDistributor.json  RewardLRT.json  StakingLRT.json  StakingTRSY.json  Strsy.json  TaxModule.json  VoteEscrow.json
