[package]
name = "fyde-rs-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
ethers = { version = "2.0.13", default-features = false, features = ["rustls"] }
serde = "1.0.202"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
reqwest ={ version = "0.11", features = ["json"] }
serde_json = "1.0.68"
chrono = "0.4"
